k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agricultural-vision-service
  namespace: agricultural-vision
spec:
  selector:
    app: agricultural-vision
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
